<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/bill_total_with_tax"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/n1"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#98FB98"
        
        android:ems="10"
        android:inputType="numberDecimal"

        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="303dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:text="@string/_12"
            android:textStyle="bold"
            android:textSize="20sp"

            />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:text="@string/_15"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:text="@string/_18"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/r4"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:text="@string/_20"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="181dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="#D3D3D3"
        android:gravity="right|end"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/total_with_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/total"
        android:layout_width="178dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="#D3D3D3"
        android:gravity="right|end"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/number_of_people"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/n2"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:background="#98FB98"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/total"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/n2"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:text="@string/total_per_person"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/totalpp"
        android:layout_width="181dp"
        android:layout_height="36dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:freezesText="true"
        android:gravity="right|end"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n2" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>